exports[`Checked`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="slds-form-element">
      <div
        className="slds-form-element__control">
        <label
          className="slds-checkbox--toggle slds-grid">
          <span
            className="slds-form-element__label slds-m-bottom--none" />
          <input
            aria-describedby="toggle-desc"
            checked={true}
            name="checkbox"
            onChange={[Function]}
            type="checkbox" />
          <span
            aria-live="assertive"
            className="slds-checkbox--faux_container">
            <span
              className="slds-checkbox--faux" />
            <span
              className="slds-checkbox--on">
              Enabled
            </span>
            <span
              className="slds-checkbox--off">
              Disabled
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": 35,
                "margin": "20px 0 0 0",
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": 22,
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Checked
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            Toggle control with checked status
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    checked
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          anonymous()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Controlled with knobs`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="slds-form-element">
      <div
        className="slds-form-element__control">
        <label
          className="slds-checkbox--toggle slds-grid">
          <span
            className="slds-form-element__label slds-m-bottom--none">
            Toggle Label
          </span>
          <input
            aria-describedby="toggle-desc"
            checked={undefined}
            disabled={undefined}
            name="checkbox"
            onChange={[Function]}
            type="checkbox" />
          <span
            aria-live="assertive"
            className="slds-checkbox--faux_container">
            <span
              className="slds-checkbox--faux" />
            <span
              className="slds-checkbox--on">
              Enabled
            </span>
            <span
              className="slds-checkbox--off">
              Disabled
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": 35,
                "margin": "20px 0 0 0",
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": 22,
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Controlled with knobs
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            Toggle controlled with knobs
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    label
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span
                        style={
                          Object {
                            "color": "#22a",
                            "wordBreak": "break-word",
                          }
                        }>
                        \"
                        Toggle Label
                        \"
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    required
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }>
                          undefined
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    error
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }>
                          undefined
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    checked
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }>
                          undefined
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    disabled
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }>
                          undefined
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                </span>
                <span>
                  <span>
                    <br />
                      
                  </span>
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          anonymous()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                  <br />
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Default`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="slds-form-element">
      <div
        className="slds-form-element__control">
        <label
          className="slds-checkbox--toggle slds-grid">
          <span
            className="slds-form-element__label slds-m-bottom--none" />
          <input
            aria-describedby="toggle-desc"
            name="checkbox"
            onChange={[Function]}
            type="checkbox" />
          <span
            aria-live="assertive"
            className="slds-checkbox--faux_container">
            <span
              className="slds-checkbox--faux" />
            <span
              className="slds-checkbox--on">
              Enabled
            </span>
            <span
              className="slds-checkbox--off">
              Disabled
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": 35,
                "margin": "20px 0 0 0",
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": 22,
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Default
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            Toggle control
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          anonymous()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Disabled`] = `
<div>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }>
    <div
      className="slds-form-element">
      <div
        className="slds-form-element__control">
        <label
          className="slds-checkbox--toggle slds-grid">
          <span
            className="slds-form-element__label slds-m-bottom--none" />
          <input
            aria-describedby="toggle-desc"
            disabled={true}
            name="checkbox"
            onChange={[Function]}
            type="checkbox" />
          <span
            aria-live="assertive"
            className="slds-checkbox--faux_container">
            <span
              className="slds-checkbox--faux" />
            <span
              className="slds-checkbox--on">
              Enabled
            </span>
            <span
              className="slds-checkbox--off">
              Disabled
            </span>
          </span>
        </label>
      </div>
    </div>
  </div>
  <a
    onClick={[Function]}
    style={
      Object {
        "background": "#28c",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": 12,
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "textDecoration": "none",
        "top": 0,
      }
    }>
    ?
  </a>
  <div
    style={
      Object {
        "background": "white",
        "bottom": 0,
        "display": "none",
        "left": 0,
        "overflow": "auto",
        "padding": "0 40px",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }>
    <a
      onClick={[Function]}
      style={
        Object {
          "background": "#28c",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": 12,
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "textDecoration": "none",
          "top": 0,
        }
      }>
      ×
    </a>
    <div
      style={undefined}>
      <div
        style={
          Object {
            "WebkitFontSmoothing": "antialiased",
            "color": "#444",
            "fontFamily": "
              -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
              \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
            ",
            "fontSize": 15,
            "fontWeight": 300,
            "lineHeight": 1.45,
          }
        }>
        <div
          style={
            Object {
              "borderBottom": "1px solid #eee",
              "marginBottom": 10,
            }
          }>
          <h1
            style={
              Object {
                "fontSize": 35,
                "margin": "20px 0 0 0",
                "padding": 0,
              }
            }>
            Toggle
          </h1>
          <h2
            style={
              Object {
                "fontSize": 22,
                "fontWeight": 400,
                "margin": "0 0 10px 0",
                "padding": 0,
              }
            }>
            Disabled
          </h2>
        </div>
        <div
          style={
            Object {
              "marginBottom": 0,
            }
          }>
          <p
            style={
              Object {
                "WebkitFontSmoothing": "antialiased",
                "color": "#444",
                "fontFamily": "
                  -apple-system, \".SFNSText-Regular\", \"San Francisco\", \"Roboto\",
                  \"Segoe UI\", \"Helvetica Neue\", \"Lucida Grande\", sans-serif
                ",
                "fontSize": 15,
              }
            }>
            Toggle control with disabled status
          </p>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Story Source
          </h1>
          <pre
            style={
              Object {
                "backgroundColor": "#fafafa",
                "fontFamily": "Menlo, Monaco, \"Courier New\", monospace",
                "fontSize": ".88em",
                "lineHeight": 1.5,
                "overflowX": "scroll",
                "padding": ".5rem",
              }
            }>
            <div
              style={
                Object {
                  "paddingLeft": 18,
                  "paddingRight": 3,
                }
              }>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                <
                Toggle
              </span>
              <span>
                <span>
                   
                  <span
                    style={Object {}}>
                    disabled
                  </span>
                </span>
                <span>
                   
                  <span
                    style={Object {}}>
                    onChange
                  </span>
                  <span>
                    =
                    <span
                      style={Object {}}>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#170",
                            }
                          }>
                          anonymous()
                        </span>
                        }
                      </span>
                    </span>
                  </span>
                   
                </span>
              </span>
              <span
                style={
                  Object {
                    "color": "#777",
                  }
                }>
                />
              </span>
            </div>
          </pre>
        </div>
        <div>
          <h1
            style={
              Object {
                "borderBottom": "1px solid #EEE",
                "fontSize": 25,
                "margin": "20px 0 0 0",
                "padding": "0 0 5px 0",
              }
            }>
            Prop Types
          </h1>
          <div>
            <h2
              style={
                Object {
                  "margin": "20px 0 0 0",
                }
              }>
              \"
              Toggle
              \" Component
            </h2>
            <table
              style={
                Object {
                  "borderCollapse": "separate",
                  "borderSpacing": "10px 5px",
                  "marginLeft": -10,
                }
              }>
              <thead>
                <tr>
                  <th>
                    property
                  </th>
                  <th>
                    propType
                  </th>
                  <th>
                    required
                  </th>
                  <th>
                    default
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr>
                  <td>
                    checked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    className
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    cols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    defaultChecked
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    error
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    label
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    name
                  </td>
                  <td>
                    string
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    required
                  </td>
                  <td>
                    bool
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    totalCols
                  </td>
                  <td>
                    number
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
                <tr>
                  <td>
                    value
                  </td>
                  <td>
                    other
                  </td>
                  <td>
                    no
                  </td>
                  <td>
                    -
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
